# Shell-project

./: .gitignore  CMakeLists.txt  README.md
debug/: CMakeLists.txt  gdb_debug.c  syntax_error_stub.c
src/: CMakeLists.txt  main.c  shell.h
src/cli/: CMakeLists.txt  cli.c  cli.h
src/executer/: CMakeLists.txt  builtins.c  builtins.h  executer.c  executer.h
src/lexer/: CMakeLists.txt  lexer.c  lexer.h  token.h
src/parser/: CMakeLists.txt  ast.c  ast.h  parser.c  parser.h
src/util/: CMakeLists.txt  error.c  error.h  str.c  str.h  vec.c  vec.h
tests/: CMakeLists.txt  test_e2e.c  test_executer.c  test_lexer.c  test_parser.c
